* Function icms_conv_nr2local. (stranger)
* Function icms_conv_local2nr. (stranger)
* Function icms_conv_nr2local to numeric outputs. (stranger)
* Messenger module (based on mpmanager). (stranger)
* jalali converter to core. (stranger)
* jalali converter to jalalijscalendar library. (stranger)
* icmsmlcontent plugin in TinyMCE for multilanguage sites. (stranger)
* recaptcha library. (stranger)

'''Changed'''
* Admin`s RSS feed to simplepie. (marcan/stranger)

'''Improved'''
* Ongoing additions to  API documentation.
* register.tpl mail template contains more user`s information. (stranger)
* adminactivate.tpl mail template contains more user`s information. (stranger)
* Updated TinyMCE to version 3.2.0.1. (stranger)
* Updated TCPDF to version 4.0.027. (stranger)

== Impresscms 1.1==

===2008-10-17 : 1.1 RC 3===

'''Added'''
* Converter of 2.2.X to icms 1.0 then 1.1 (stranger/phppp)
* Converter of 2.3.X to icms 1.0 then 1.1 (stranger)
* TRUST_PATH to upgarder. (stranger)
* a checker to see if TRUST_PATH exists in adminmenu, if it doesn't it will prompt admins from accessing admin menu. (stranger)
* a checker to see if email address already exists in adminmenu. (stranger)

'''Improved'''
* Updated system to version 1.10. (stranger)
* Function icms_cleaning_write_folders. (stranger)
* Query execution during character set conversion

'''Fixed'''
* Issues with google analytic textform in admin menu. (stranger)
* Issues with Jalalijscalendar option in admin menu. (stranger)
* Issues with new templates not being inserted in system module. (stranger)
* Issues with Jalalijscalendar option in Persian language. (stranger)
* Issues with reset buttons. (mcdonald3072)
* When converting the db to another character set during an upgrade, the default values were being dropped if they were empty strings (skenow)
* Issues with Jalalijscalendar button in forms. (stranger)
* Issue with upgrader, blocks got twice inserted. (stranger)